--- a/about.html
+++ b/about.html
@@ -144,13 +144,13 @@
 	</div>
 
 	<div class="about1">
-		<img src="pictures/bath.jpg" alt=sketch>
+		<img src="pictures/bath.JPG" alt=sketch>
 			<h2><em>About this site...</em></h2></br>
 			<h3>a paragraph explaining the site</h3>
 	</div>
 
 	<div class="about2">
-		<img src="pictures/town.jpg" alt=town>
+		<img src="pictures/town.JPG" alt=town>
 			<h2><em>About the author...</em></h2></br>
 			<h3>a paragraph about the author</h3>
 	</div>
