--- a/article.html
+++ b/article.html
@@ -147,7 +147,7 @@
 		</div>
 
 		<div class="about">
-			<div class="image1"><img src="pictures/royal-crescent.png" alt="rc" width="754px" height="auto"></div>
+			<div class="image1"><img src="pictures/royal-crescent.PNG" alt="rc" width="754px" height="auto"></div>
 			<h3>The earliest surviving written work on the subject of architecture is De architectura, by the Roman architect Vitruvius in the early 1st century AD.[8] According to Vitruvius, a good building should satisfy the three principles of firmitas, utilitas, venustas,[9][10] commonly known by the original translation – firmness, commodity and delight. An equivalent in modern English would be:</br>
 
     			<ul><li>Durability - a building should stand up robustly and remain in good condition.</li></br>
@@ -158,7 +158,7 @@
 
 			The most important aspect of beauty was, therefore, an inherent part of an object, rather than something applied superficially, and was based on universal, recognisable truths. The notion of style in the arts was not developed until the 16th century, with the writing of Vasari:[11] by the 18th century, his Lives of the Most Excellent Painters, Sculptors, and Architects had been translated into Italian, French, Spanish, and English. Ancient Roman architect Vitruvius described in his theory of proper architecture, the proportions of a man.</br>
 
-			<div class=picture><img src="pictures/flwhouse.jpg" alt="flw" width="300px" height="auto"></div>In the early 19th century, Augustus Welby Northmore Pugin wrote Contrasts (1836) that, as the titled suggested, contrasted the modern, industrial world, which he disparaged, with an idealized image of neo-medieval world. Gothic architecture, Pugin believed, was the only "true Christian form of architecture."</br>
+			<div class=picture><img src="pictures/flwhouse.JPG" alt="flw" width="300px" height="auto"></div>In the early 19th century, Augustus Welby Northmore Pugin wrote Contrasts (1836) that, as the titled suggested, contrasted the modern, industrial world, which he disparaged, with an idealized image of neo-medieval world. Gothic architecture, Pugin believed, was the only "true Christian form of architecture."</br>
 
 			The 19th-century English art critic, John Ruskin, in his Seven Lamps of Architecture, published 1849, was much narrower in his view of what constituted architecture. Architecture was the "art which so disposes and adorns the edifices raised by men ... that the sight of them" contributes "to his mental health, power, and pleasure".[12]</br>
 
@@ -166,7 +166,7 @@
 
 			On the difference between the ideals of architecture and mere construction, the renowned 20th-century architect Le Corbusier wrote: "You employ stone, wood, and concrete, and with these materials you build houses and palaces: that is construction. Ingenuity is at work. But suddenly you touch my heart, you do me good. I am happy and I say: This is beautiful. That is Architecture".[13]</br>
 
-			<div class="image"><img src="pictures/aabuilding.jpg" alt="aa" width="300px" height="auto"></div>Le Corbusier's contemporary Ludwig Mies van der Rohe said "Architecture starts when you carefully put two bricks together. There it begins."[14]</br>
+			<div class="image"><img src="pictures/aabuilding.JPG" alt="aa" width="300px" height="auto"></div>Le Corbusier's contemporary Ludwig Mies van der Rohe said "Architecture starts when you carefully put two bricks together. There it begins."[14]</br>
 
 			The notable 19th-century architect of skyscrapers, Louis Sullivan, promoted an overriding precept to architectural design: "Form follows function".</br>
 
