--- a/articles.html
+++ b/articles.html
@@ -7,7 +7,7 @@
 		@import url('https://fonts.googleapis.com/css?family=Old+Standard+TT');
 		body{
 			background-color:#F3C45C;
-			background-image: url(pictures/mono-sketch.jpg);
+			background-image: url(pictures/mono-sketch.JPG);
 			background-repeat:no-repeat;
 			background-attachment: fixed;
 			background-position: center;
