--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
 			}
 			body{
 				background-color:#F3C45C;
-				background-image: url(pictures/mono-sketch.jpg);
+				background-image: url(pictures/mono-sketch.JPG);
 				background-repeat:no-repeat;
 				background-attachment: fixed;
 				background-position: center;
