--- a/gallery.html
+++ b/gallery.html
@@ -65,7 +65,7 @@
 			}
 			body{
 				background-color:#F3C45C;
-				background-image: url(pictures/mono-sketch.jpg);
+				background-image: url(pictures/mono-sketch.JPG);
 				background-repeat:no-repeat;
 				background-attachment: fixed;
 				background-position: center;
@@ -135,16 +135,16 @@
 				<th>
 					<div class="gallery1">
 						<h3>Ancient Architecture </h3>
-						<a target="_blank" href="pictures/Petra-Jordan.jpg"> 
-			 				<img src="pictures/Petra-Jordan.jpg" alt="Petra" >
+						<a target="_blank" href="pictures/Petra-Jordan.JPG"> 
+			 				<img src="pictures/Petra-Jordan.JPG" alt="Petra" >
 						</a>
 						<div class="desc">Petra, Jordan</div>	
 					</div>
 				</th>
 				<th>
 				<!---<div class="gallery1">-->
-					<a target="_blank" href="pictures/parthenon.jpg">
-						<img src="pictures/parthenon.jpg" alt="parthenon">
+					<a target="_blank" href="pictures/parthenon.JPG">
+						<img src="pictures/parthenon.JPG" alt="parthenon">
 					</a>
 					<div class="desc">The Parthenon, Greece</div>
 				</div>
@@ -152,8 +152,8 @@
 
 				<th>
 				<div class="gallery1">
-					<a target="_blank" href="pictures/Tikal.jpg">
-						<img src="pictures/Tikal.jpg" alt="Tikal" >
+					<a target="_blank" href="pictures/Tikal.JPG">
+						<img src="pictures/Tikal.JPG" alt="Tikal" >
 					</a>
 					<div class="desc">Tikal, Guatemala</div>
 				</div>
@@ -164,8 +164,8 @@
 			 	<td>
 			 		<div class="gallery2">
 						<h3>Medieval Archicture</h3>
-							<a target="_blank" href="pictures/bath-abbey.jpg">
-						<img src="pictures/bath-abbey.jpg" alt="bath-abbey">
+							<a target="_blank" href="pictures/bath-abbey.JPG">
+						<img src="pictures/bath-abbey.JPG" alt="bath-abbey">
 							</a>
 					<div class="desc">Bath Abbey, UK</div>
 					</div>
@@ -173,8 +173,8 @@
 
 			 	<td>
 			 		<div class="gallery2">
-						<a target="_blank" href="pictures/vezelay.jpg">
-					<img src="pictures/vezelay.jpg" alt="vezelay">
+						<a target="_blank" href="pictures/vezelay.JPG">
+					<img src="pictures/vezelay.JPG" alt="vezelay">
 						</a>
 					<div class="desc">Vezelay Abbey, France</div>
 					</div>
@@ -182,8 +182,8 @@
 
 			 	<td>
 			 		<div class="gallery2">
-			 			<a target="_blank" href="pictures/forbiddencity.jpg">
-			 		<img src="pictures/forbiddencity.jpg" alt="forbiddencity">
+			 			<a target="_blank" href="pictures/forbiddencity.JPG">
+			 		<img src="pictures/forbiddencity.JPG" alt="forbiddencity">
 			 			</a>
 			 		<div class="desc">The Hall of Supreme Harmony, China</div>
 			 	</div>
@@ -194,8 +194,8 @@
 			 	<td>
 			 		<div class="gallery3">
 						<h3>Renaissance Architecture</h3>
-							<a target="_blank" href="pictures/Palazzo-Medici.jpg">
-						<img src="pictures/Palazzo-Medici.jpg" alt="Palazzo-Medici" >
+							<a target="_blank" href="pictures/Palazzo-Medici.JPG">
+						<img src="pictures/Palazzo-Medici.JPG" alt="Palazzo-Medici" >
 							</a>
 						<div class="desc">Palazzo Medici, Italy</div>
 					</div>
@@ -203,8 +203,8 @@
 
 			 	<td>
 			 		<div class="gallery3">
-						<a target="_blank" href="pictures/Tempietto.jpg">
-					<img src="pictures/Tempietto.jpg" alt="Tempietto">
+						<a target="_blank" href="pictures/Tempietto.JPG">
+					<img src="pictures/Tempietto.JPG" alt="Tempietto">
 						</a>
 					<div class="desc">The Tempietto, Italy</div>
 					</div>
@@ -212,8 +212,8 @@
 
 			 	<td>
 			 		<div class="gallery3">
-						<a target="_blank" href="pictures/uni-vallodolid.jpg">
-					<img src="pictures/uni-vallodolid.jpg" alt="uni-vallodolid">
+						<a target="_blank" href="pictures/uni-vallodolid.JPG">
+					<img src="pictures/uni-vallodolid.JPG" alt="uni-vallodolid">
 						</a>
 					<div class="desc">University of Vallodolid, Spain</div>
 					</div>
@@ -225,8 +225,8 @@
 			 	<td>
 			 		<div class="gallery4">
 						<h3>Baroque Architecture</h3>
-							<a target="_blank" href="pictures/church-gesu.jpg">
-						<img src="pictures/church-gesu.jpg" alt="church-gesu" >
+							<a target="_blank" href="pictures/church-gesu.JPG">
+						<img src="pictures/church-gesu.JPG" alt="church-gesu" >
 							</a>
 					<div class="desc">Church of the Gesu, Italy</div>
 					</div>
@@ -234,8 +234,8 @@
 
 			 	<td>
 			 		<div class="gallery4">
-						<a target="_blank" href="pictures/Our-Lady.jpg">
-					<img src="pictures/Our-Lady.jpg" alt="Our-Lady" >
+						<a target="_blank" href="pictures/Our-Lady.JPG">
+					<img src="pictures/Our-Lady.JPG" alt="Our-Lady" >
 						</a>
 					<div class="desc">Our Lady of the Immaculate Conception, India</div>
 				</div>
@@ -243,8 +243,8 @@
 
 			 	<td>
 			 		<div class="gallery4">
-						<a target="_blank" href="pictures/certosa-pavia.jpg">
-					<img src="pictures/certosa-pavia.jpg" alt="certosa-pavia" >
+						<a target="_blank" href="pictures/certosa-pavia.JPG">
+					<img src="pictures/certosa-pavia.JPG" alt="certosa-pavia" >
 						</a>
 					<div class="desc">The Certose di Pavia, Italy</div>
 					</div>
@@ -256,8 +256,8 @@
 			 	<td>
 			 		<div class="gallery5">
 						<h3>Modernist Architecture</h3></div>
-						<a target="_blank" href="pictures/lovell-house.jpg">
-						<img src="pictures/lovell-house.jpg" alt="lovell-house" >
+						<a target="_blank" href="pictures/lovell-house.JPG">
+						<img src="pictures/lovell-house.JPG" alt="lovell-house" >
 						</a>
 					<div class="desc">The Lovell House, USA</div>
 					</div>
@@ -265,8 +265,8 @@
 
 			 	<td>
 			 		<div class="gallery5">
-						<a target="_blank" href="pictures/steiner-house.jpg">
-					<img src="pictures/steiner-house.jpg" alt="steiner-house" >
+						<a target="_blank" href="pictures/steiner-house.JPG">
+					<img src="pictures/steiner-house.JPG" alt="steiner-house" >
 						</a>
 					<div class="desc">The Steiner House, Austria</div>
 					</div>
@@ -274,8 +274,8 @@
 
 			 	<td>
 			 		<div class="gallery5">
-			 			<a target="_blank" href="pictures/kiasma.jpg">
-			 		<img src="pictures/kiasma.jpg" alt="kiasma">
+			 			<a target="_blank" href="pictures/kiasma.JPG">
+			 		<img src="pictures/kiasma.JPG" alt="kiasma">
 			 			</a>
 			 		<div class="desc">The Kiasma Museum, Finland</div>
 			 	</div>
