--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
    				border-right:20px solid #F3C45C;
 			}
 			body{
-				background-image: url(pictures/sketch.jpg);
+				background-image: url(pictures/sketch.JPG);
 				background-repeat:no-repeat;
 				background-position: center;
 				background-size: auto;
