--- a/media.html
+++ b/media.html
@@ -80,7 +80,7 @@
 			}
 			body{
 				background-color:#F3C45C;
-				background-image: url(pictures/mono-sketch.jpg);
+				background-image: url(pictures/mono-sketch.JPG);
 				background-repeat:no-repeat;
 				background-attachment: fixed;
 				background-position: center;
@@ -128,9 +128,9 @@
 
 	<div class="information">
 		<h3> <div class="icons"> 
-			<img src="pictures/ig.png" alt=ig style="float:left; width:50px; height:50px;margin-left: 250px;">
-			<img src="pictures/fb.png" alt=fb style="float:left;width:50px; height:50px;">
-			<img src="pictures/tw.png" alt=tw style="float:left;width:50px; height:50px;">
+			<img src="pictures/ig.PNG" alt=ig style="float:left; width:50px; height:50px;margin-left: 250px;">
+			<img src="pictures/fb.PNG" alt=fb style="float:left;width:50px; height:50px;">
+			<img src="pictures/tw.PNG" alt=tw style="float:left;width:50px; height:50px;">
 			</div>
 		</br></br></br> Follow this blog on instagram, facebook, and twitter (insert handles)
 		</h3>
